# inventree-supplier-import

./: MANIFEST.in  README.md  setup.cfg  setup.py
inventree_supplier_import/: importer.py  plugin.py
inventree_supplier_import/suppliers/: digikey.py  farnell.py  mouser.py  rs.py
static/: SupplierImportPanel.js
