[metadata]
name = inventree-supplier-import
version = 1.0.0
description = InvenTree plugin to import parts from Mouser, DigiKey, Farnell and RS Components via SKU
long_description = file: README.md
author = Your Lab
license = MIT

[options]
packages = find:
install_requires =
    requests>=2.28

[options.entry_points]
inventree_plugins =
    SupplierImportPlugin = inventree_supplier_import.plugin:SupplierImportPlugin
