[metadata]
name = inventree-supplier-import
version = 2.2.0
description = InvenTree plugin (>= 1.0) to import parts from Mouser, DigiKey, Farnell and RS Components via SKU
long_description = file: README.md
author = ORN
license = MIT

[options]
packages = find:
install_requires =
    requests>=2.28

# Inclure les fichiers statiques dans la distribution
[options.package_data]
* = *.js, *.css

[options.entry_points]
inventree_plugins =
    SupplierImportPlugin = inventree_supplier_import.plugin:SupplierImportPlugin
